# Creda

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci-cd.yml
contracts/distribution/: Cargo.toml
contracts/distribution/src/: lib.rs  test.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs  test.rs
frontend/: package-lock.json  package.json
frontend/src/__tests__/: projects.test.ts  tx.test.ts  wallet.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/activity/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/tx-center/: page.tsx
frontend/src/components/: Navbar.tsx  Preloader.tsx
frontend/src/services/: stellar.ts
frontend/src/state/: projects.ts  tx.ts  wallet.ts
scripts/: deploy.js
