[workspace]
resolver = "2"
members = [
    "contracts/treasury",
    "contracts/distribution",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
lto = true
codegen-units = 1

[patch.crates-io]
ed25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", tag = "ed25519-2.2.0" }
