[package]
name = "creda-distribution"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "=22.0.0" }
creda-treasury = { path = "../treasury" }

[dev-dependencies]
soroban-sdk = { version = "=22.0.0", features = ["testutils"] }
creda-treasury = { path = "../treasury" }
